--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
-alpaca-py==3.3.1
-aiohttp==3.9.5
-pandas==2.2.2
-numpy==1.26.4
-ta-lib==0.4.28
-python-dotenv==1.0.1
-pytz==2024.1
-redis==5.0.8
-loguru==0.7.2
+alpaca-py
+aiohttp
+pandas
+numpy
+ta-lib
+python-dotenv
+pytz
+redis
+loguru
