--- a/environment.yml
+++ b/environment.yml
@@ -3,17 +3,17 @@ channels:
   - conda-forge
   - defaults
 dependencies:
-  - python=3.11
+  - python=3.14
   - pip
   - libta-lib
-  - ta-lib=0.6.4
+  - ta-lib
   - numpy
   - pandas
   - pytz
   - redis-py
   - pip:
-      - alpaca-py>=0.28.0
-      - aiohttp==3.9.5
-      - python-dotenv==1.0.1
-      - loguru==0.7.2
+      - alpaca-py
+      - aiohttp
+      - python-dotenv
+      - loguru
       - -r requirements-dev.txt
