Fix import errors and type checking issues in option chain and wheel strategies
- Fix OptionExpirationType import error by removing unsupported enum
- Fix send_signal calls to use keyword arguments for price, session, and extra
- Fix type checking issues by using getattr instead of hasattr
- Fix indentation errors in option_chain.py
- Add wheel strategy files and option chain implementation

--- a/environment.yml
+++ b/environment.yml
@@ -16,4 +16,6 @@ dependencies:
       - aiohttp
       - python-dotenv
       - loguru
+      - alpaca-trade-api
       - -r requirements-dev.txt
+      - -r requirements.txt
